# neurons

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: build.yml  ci.yml  gui-test.yml  release-macos.yml  release.yml  test.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
cli/src/cli/commands/: base_command.cpp  base_command.h  chat_command.cpp  chat_command.h  config_command.cpp  config_command.h  download_command.cpp  download_command.h  list_command.cpp  list_command.h  load_command.cpp  load_command.h  mcp_command.cpp  mcp_command.h  node_command.cpp  node_command.h  remote_node_runner.cpp  remote_node_runner.h  search_command.cpp  search_command.h  server_command.cpp  server_command.h  token_command.cpp  token_command.h
cli/src/cli/config/: neurons_config.cpp  neurons_config.h
cli/src/cli/core/: cli_app.cpp  cli_app.h
cli/src/cli/utils/: format_utils.cpp  format_utils.h  progress_bar.cpp  progress_bar.h  table_formatter.cpp  table_formatter.h  tool_approval_ui.cpp  tool_approval_ui.h  tool_policy.cpp  tool_policy.h
compute/: CMakeLists.txt
compute/src/compute/backends/mlx/: mlx_backend.cpp  mlx_backend.h  mlx_buffer.h  mlx_utils.h
compute/src/compute/backends/simd/: cpu_buffer.h  neon_backend.cpp  neon_backend.h  simd_utils.cpp  simd_utils.h
compute/src/compute/core/: compute_backend.cpp  compute_backend.h  compute_backend.mm  compute_types.h  graph.cpp  graph.h  tensor.cpp  tensor.h
compute/src/compute/model/: chat_template.cpp  chat_template.h  gemma_model.cpp  gemma_model.h  gemma_model_base.cpp  gemma_model_base.h  gemma_model_mlx.cpp  gemma_model_mlx.h  hf_tokenizer.cpp  hf_tokenizer.h  kv_cache.h  language_model.cpp  language_model.h  llama_model.cpp  llama_model.h  mlx_ops.h  model_config.cpp  model_config.h  model_loader.cpp  model_loader.h  qwen3_moe_model.cpp  qwen3_moe_model.h  qwen3_moe_model_base.cpp  qwen3_moe_model_base.h  qwen3_moe_model_mlx.cpp  qwen3_moe_model_mlx.h  qwen3_transformer_moe_model_mlx.cpp  qwen3_transformer_moe_model_mlx.h  sampler.cpp  sampler.h  simple_bpe_tokenizer.cpp  simple_bpe_tokenizer.h  tinyllama_inference.cpp  tinyllama_inference.h  tokenizer_config.cpp  tokenizer_config.h  tool_runner.cpp  tool_runner.h
compute/tests/compute/: test_attention_qkv_trace.cpp  test_benchmark_backends.cpp  test_chat_template.cpp  test_config.h.in  test_forward_pass.cpp  test_fp16bf16_integration.cpp  test_gemma_integration.cpp  test_hf_tokenizer.cpp  test_llama3_integration.cpp  test_mistral_integration.cpp  test_mlx_backend.cpp  test_model_config.cpp  test_model_loader.cpp  test_neon_execution.cpp  test_qwen2_integration.cpp  test_qwen3_moe_integration.cpp  test_qwen3_transformer_moe_integration.cpp  test_sampler.cpp  test_simd.cpp  test_simple_bpe_tokenizer.cpp  test_symbolic_api.cpp  test_tokenizer_comparison.cpp  test_tokenizer_config.cpp  test_tool_runner.cpp
compute/tests/compute/baselines/: test_attention_qkv.py  test_forward_pass.py
compute/tests/compute/baselines/output/: attention_full_baseline.safetensors  attention_qkv_baseline.npz  forward_pass_baseline.safetensors
compute/tests/compute/resources/: tinyllama_config.json
compute/tokenizers-sys/: Cargo.toml  cbindgen.toml  tokenizers_c.h
compute/tokenizers-sys/src/: lib.rs
docs/: models.md
gui/: README.md  pubspec.yaml
gui/lib/: main.dart
gui/lib/models/: node_config.dart
gui/lib/proto/: .gitignore
gui/lib/routing/: glass_page_route.dart
gui/lib/screens/: chat_screen.dart  connect_screen.dart  load_settings_sheet.dart  model_browser_screen.dart  model_picker_screen.dart  nodes_screen.dart  splash_screen.dart
gui/lib/services/: app_state.dart  chat_repository.dart  ffi_neurons_client.dart  neurons_client.dart  node_repository.dart  token_repository.dart
gui/lib/theme/: app_theme.dart  tokens.dart
gui/lib/widgets/: animated_dots.dart  app_shell.dart  blinking_cursor.dart  glass_card.dart  glass_input.dart  hf_token_dialog.dart  model_capabilities.dart  model_pill.dart  neurons_wordmark.dart  resize_divider.dart  token_stats_bar.dart
gui/linux/: CMakeLists.txt
gui/linux/runner/: my_application.cc
gui/macos/: .gitignore  Podfile
gui/macos/Runner/: Info.plist
gui/macos/Runner.xcodeproj/: project.pbxproj
gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/macos/Runner/Configs/: AppInfo.xcconfig
gui/test/: widget_test.dart
gui/windows/: CMakeLists.txt
gui/windows/runner/: main.cpp
models/: CMakeLists.txt
models/src/models/api/: huggingface_client.cpp  huggingface_client.h
models/src/models/core/: model_info.h
models/src/models/registry/: model_registry.cpp  model_registry.h
models/tests/models/: test_huggingface_client.cpp  test_huggingface_integration.cpp  test_model_registry.cpp
scripts/: gen_proto.sh  neurons_service.entitlements
service/: CMakeLists.txt
service/ffi/: neurons_ffi.cpp  neurons_ffi.h
service/proto/: neurons.proto
service/src/: http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  neurons_service.cpp  neurons_service.h  service_runner.cpp  service_runner.h
service/src/mcp/: builtin_filesystem.cpp  builtin_filesystem.h  builtin_shell.cpp  builtin_shell.h  mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h  mcp_types.h
service/tests/: test_builtin_mcp.cpp  test_mcp_manager.cpp  test_mcp_rpc.cpp  test_tool_runner_e2e.cpp
service/tests/fixtures/: mcp_echo_server.py
